# stack-sparrow

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
sparrow/: __init__.py  main.py
sparrow/assistant/: review.py  run.py
sparrow/libs/: config.py  constants.py  html.py  llm.py  scm.py  strings.py
sparrow/templates/: code-review.html
